controller/test/e2e/testdata/apikeyauth/secured-route-configmap.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-secure-cm
  namespace: agentgateway-base
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "secureroutecm.com"
  rules:
    - backendRefs:
        - name: backend
          port: 80
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: route-policy-configmap
  namespace: agentgateway-base
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: route-secure-cm
  traffic:
    apiKeyAuthentication:
      mode: Strict
      configMapSelector:
        matchLabels:
          app: route-apikey-auth-cm
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: route-apikey-auth-cm
  namespace: agentgateway-base
  labels:
    app: route-apikey-auth-cm
data:
  client1: |
    {
      "keyHash": "sha256:34cd6524029b16aa34f7dca2444d0bc166724933264897305b9061dea0c9cd29",
      "metadata": {
        "group": "sales"
      }
    }
  client2: |
    {
      "keyHash": "sha256:e5d8cff1e9af4767b50a079389f1bad6992e7e3e8e91d5fca1e76e5d898cb7a0"
    }
